--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-28 03:48:41
+lastsearch = 2024-07-28 08:06:15
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
 url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = -20.6%%
-title = Bộ chăn ga Everon ESB-22020 mang phong cách trẻ trung ...
-url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esb-22020-pd.html
+match = -26.5%%
+title = Bộ chăn ga Everon ESB - 23021 hứa hẹn sẽ là best seller ...
+url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esb-23021-pd.html
 
 [everonhn.com.vn]
 match = 25.0%%
@@ -83,8 +83,8 @@ url = https://www.everonvn.vn/chi-tiet/everon-est24035.html
 
 [demxanh.com]
 match = -2.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 13
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-13.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
 
 [antbedding.com]
 match = 26.5%%
