--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-27 18:21:56
+lastsearch = 2024-07-28 08:09:40
 
 [demxanh.com]
 match = -39.1%%
@@ -22,9 +22,9 @@ title = Chiếu trúc cao bằng 150*190
 url = https://uannga.vn/index.php/shops/chieu-mat/chieu-truc-cao-bang-150-190.html
 
 [shopee.vn]
-match = -4.3%%
-title = CHIẾU TRÚC CAO SƠN – CAO BẰNG LOẠI 1 HÀNG ĐẸP
-url = https://shopee.vn/CHIẾU-TRÚC-CAO-SƠN-–-CAO-BẰNG-LOẠI-1-HÀNG-ĐẸP-i.270303342.11105491570
+match = 17.4%%
+title = Chiếu cao bằng Việt Nam 1.2m x 1.95
+url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
 
 [chuyenhangviet.com]
 match = -43.5%%
