--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-28 05:14:03
+lastsearch = 2024-07-28 08:05:54
 
 [shopee.vn]
 match = -216.7%%
@@ -43,8 +43,8 @@ url = https://thinhgo.com/products/ghe-nem-dua-cao-cap-4000-913
 
 [tiki.vn]
 match = -241.7%%
-title = Thảm ghế, nệm ghế gỗ kích thước 2m x 60cm các màu nâu
-url = https://tiki.vn/tham-ghe-nem-ghe-go-kich-thuoc-2m-x-60cm-cac-mau-nau-p89638136.html
+title = Thảm ghế nệm ghế kích thước 2m2 x 55cm mẫu màu đỏ ...
+url = https://tiki.vn/tham-ghe-nem-ghe-kich-thuoc-2m2-x-55cm-mau-mau-do-moi-co-vien-p89638586.html
 
 [suongtuyet.com]
 match = -125.0%%
@@ -59,7 +59,7 @@ url = https://nemkimcuong.vn/mienbac/vi/san-pham/bo-ghe-sofa-tan-co-dien-cd01-xu
 [www.lazada.vn]
 match = -300.0%%
 title = Nệm ghế , thảm ghế hoàng gia đỏ các kích thước từ 1m7 x ...
-url = https://www.lazada.vn/products/nem-ghe-tham-ghe-hoang-gia-do-cac-kich-thuoc-tu-1m7-x-55cm-i488602652.html?srsltid=AfmBOorEdmkK9ytSQTlKKo81yyTCrZGe3ou02R6Q00U4kK6Kl3d7NGBq
+url = https://www.lazada.vn/products/nem-ghe-tham-ghe-hoang-gia-do-cac-kich-thuoc-tu-1m7-x-55cm-i488602652.html
 
 [vn.my-best.com]
 match = -233.3%%
