--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-27 22:39:52
+lastsearch = 2024-07-28 08:15:37
 
 [www.tui.co.uk]
 match = -250.0%%
@@ -12,8 +12,8 @@ title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
 url = https://www.tui.co.uk/
 
 [uk.trip.com]
-match = -233.3%%
-title = Book Cheap TUI Airways Limited Flights to Seoul
+match = 0.0%%
+title = 
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -316.7%%
-title = TUI Travel sees strong 2014 as customers spend more on ...
-url = https://www.reuters.com/article/world/tui-travel-sees-strong-2014-as-customers-spend-more-on-foreign-holidays-idUSBRE9B90FS/
+match = -258.3%%
+title = TUI shares turn negative ahead of savings decisions
+url = https://www.reuters.com/article/world/tui-shares-turn-negative-ahead-of-savings-decisions-idUSL14490949/
 
 [www.mybaggage.com]
 match = -116.7%%
