--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-28 04:33:42
+lastsearch = 2024-07-28 11:19:51
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -37,9 +37,9 @@ title = Ống Kính Pentax Thế giới máy ảnh số
 url = https://www.thegioimayanhso.vn/ong-kinh-pentax
 
 [www.vnphoto.net]
-match = -3.6%%
-title = Nên Chọn Pentax K7 Hay K5. [Archive]
-url = http://www.vnphoto.net/forums/archive/index.php/t-179152.html
+match = -32.1%%
+title = Ăn chơi phải sướng [Archive] - VNPHOTO.net Forum
+url = http://www.vnphoto.net/forums/archive/index.php/t-71398.html
 
 [nspp.mofa.gov.tw]
 match = -46.4%%
@@ -310,4 +310,9 @@ url = https://nguyensongviet3979.blogspot.com/2019/12/tam-quoc-chi-tap-1-1.html
 match = -46.4%%
 title = Chùa Hương Tích - Đền Mẫu Liễu Hạnh - Mộ Đại tướng Võ ...
 url = https://dongduongtravel.com/?x=342/du-lich-trong-nuoc/chua-huong-tich-den-mau-lieu-hanh-mo-dai-tuong-vo-nguyen-giap-dong-thien-duong
+
+[industria-alimentare.it]
+match = -14.3%%
+title = Về Bệnh Hậu Môn Caác - industria alimentare
+url = https://industria-alimentare.it/811679-môn-về-hậu-caác-bệnh.html
 
