--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-07-28 10:39:03
+lastsearch = 2024-07-28 11:20:10
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/Đệm-Memory-Foam-Massage-Kawaii-Dreamland-Nệm-Công-
 [demxanh.com]
 match = -40.6%%
 title = Đệm cao su Dunlopillo Latex World Pure giá rẻ nhất Hà Nội
-url = https://demxanh.com/dem-cao-su-dunlopillo-latex-world-pure.html
+url = https://demxanh.com/dem-cao-su-dunlopillo-latex-world-pure.html?srsltid=AfmBOooFB4q2B3TR-xJe0WRvcmBRH_YpEvfwItoiSZuYBKna5ManY59S
 
 [www.youtube.com]
 match = -43.8%%
@@ -42,12 +42,17 @@ title = Pulled the trigger today and purchased the Dreamfoam ...
 url = https://forum.mattressunderground.com/t/pulled-the-trigger-today-and-purchased-the-dreamfoam-ultimate-dreams-13inch-gel-memory-foam/6902
 
 [www.emag.hu]
-match = -53.1%%
-title = Previ Organikus Pamut Matrac, Comfort Aquagel Air-Fresh ...
-url = https://www.emag.hu/previ-organikus-pamut-matrac-comfort-aquagel-air-fresh-14-8-memoriareteg-ortopediai-anatomiai-antiallergen-antibakterialis-szelloztetes-2d-free-air-160-x-200-cm-6426390159373/pd/DQ5BD3MBM/
+match = -40.6%%
+title = Aloe Vera ortopéd matrac + AJÁNDÉK Aloe Vera párna! ...
+url = https://www.emag.hu/aloe-vera-ortoped-matrac-ajandek-aloe-vera-parna-160-x-200cm-aloe04/pd/DR270DBBM/
 
 [thegioidemonline.com]
 match = -9.4%%
 title = Xả kho thanh lý chăn ga gối đệm tháng 8.2022
-url = https://thegioidemonline.com/xa-kho-thanh-ly-chan-ga-goi-dem-thang-82022.html
+url = https://thegioidemonline.com/xa-kho-thanh-ly-chan-ga-goi-dem-thang-82022.html?srsltid=AfmBOor7jXf-kt3IiV0oDfn1Z5jVTVWwHt6EIzBtkyYvodC0DMY5WZAV
+
+[www.facebook.com]
+match = -46.9%%
+title = Em Cần bán gấp căn chung cư xala 2 ngủ với giá chỉ 1.3x tỷ
+url = https://www.facebook.com/groups/1520641274872446/posts/-em-cần-bán-gấp-căn-chung-cư-xala-2-ngủ-với-giá-chỉ-13x-tỷ-nhà-thoáng-mát-đẹp-đê/3726372437632641/
 
