--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-28 10:44:57
+lastsearch = 2024-07-28 11:14:54
 
 [shopee.vn]
 match = -216.7%%
@@ -47,14 +47,14 @@ title = Thảm ghế, nệm ghế gỗ kích thước 2m x 60cm các màu nâu
 url = https://tiki.vn/tham-ghe-nem-ghe-go-kich-thuoc-2m-x-60cm-cac-mau-nau-p89638136.html
 
 [suongtuyet.com]
-match = -125.0%%
-title = Bộ Sưu Tập Đệm Ghế Gỗ Đẹp Nhất 2024
-url = https://suongtuyet.com/bo-suu-tap-nem-ghe-go-dep-gia-re-cho-gia-dinh.html
+match = -133.3%%
+title = Nên Mua Thảm Lót Ghế Gỗ Hay Đệm Ghế Gỗ?
+url = https://suongtuyet.com/nen-mua-tham-lot-ghe-go-hay-dem-ghe-go.html
 
 [nemkimcuong.vn]
-match = -191.7%%
-title = BỘ GHẾ SOFA TÂN CỔ ĐIỂN CĐ01 - Xuất khẩu
-url = https://nemkimcuong.vn/mienbac/vi/san-pham/bo-ghe-sofa-tan-co-dien-cd01-xuat-khau/
+match = -16.7%%
+title = BỘ GHẾ ĐƠN MODEL 01
+url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
 match = -300.0%%
