--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-28 01:33:27
+lastsearch = 2024-07-28 12:31:41
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -127,9 +127,9 @@ title = Chăn bốn mùa everon hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chăn bốn mùa everon
 
 [elambo.vn]
-match = -83.3%%
-title = Chăn bốn mùa
-url = https://elambo.vn/chan-bon-mua/
+match = -32.1%%
+title = 5+ bộ ga chun cotton đẹp giá ưu đãi và chất lượng
+url = https://elambo.vn/ga-chun-cotton/
 
 [www.booking.com]
 match = -57.1%%
