--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-28 05:12:39
+lastsearch = 2024-07-28 12:33:05
 
 [screenrant.com]
 match = 0.0%%
@@ -29,12 +29,12 @@ url = https://www.reddit.com/r/VietNam/comments/18zushv/why_are_xanh_sm_drivers_
 [demxanh.com]
 match = 28.6%%
 title = Màn chụp giá rẻ
-url = https://demxanh.com/man-chup-gia-re.html
+url = https://demxanh.com/man-chup-gia-re.html?srsltid=AfmBOopel98y4coFX9oCDg1S_VcUlMuPOD_69WLsjBNk4NOZiz93y4Yn
 
 [www.uscis.gov]
-match = -50.0%%
-title = Explore my Options | USCIS
-url = https://www.uscis.gov/forms/explore-my-options
+match = -114.3%%
+title = About the EB-5 Visa Classification
+url = https://www.uscis.gov/working-in-the-united-states/permanent-workers/employment-based-immigration-fifth-preference-eb-5/about-the-eb-5-visa-classification
 
 [www.evergreenrecreation.com]
 match = -157.1%%
