--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-28 11:24:54
+lastsearch = 2024-07-28 13:39:21
 
 [everon.online]
 match = -7.4%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
 url = https://everon.online/products/bo-everon-sr01
 
 [everonvn.com.vn]
-match = -66.7%%
-title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
-url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
+match = -74.1%%
+title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) mẫu ...
+url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071?srsltid=AfmBOoqmKXtdN8oAEqtdl8P4_7qMKmFvNmaAKATq_drF9GaHcl4qFbWB
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,7 +24,7 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOopA9aK7nbpxQx-0xFQUqLJs40XsV1Y3dQ-jpxzzMPW1AnCkcIyw
 
 [everonhanquoc.vn]
 match = 18.5%%
@@ -37,9 +37,9 @@ title = Bộ chăn ga Everon ESB -22020
 url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = 10.5%%
-title = Bộ Everon Epm-21070
-url = https://everon.net.vn/everon/2131/bo-everon-epm-21070
+match = 15.8%%
+title = Bộ Everon Epm-21060
+url = https://everon.net.vn/everon/2109/bo-everon-epm-21060
 
 [sieuthidemhanquoc.com.vn]
 match = 22.2%%
