--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-28 13:21:39
+lastsearch = 2024-07-28 13:34:11
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -122,9 +122,9 @@ title = Thiếu tướng Lê Đình Cường kiểm tra công tác huấn luyệ
 url = https://canhsatbien.vn/thieu-tuong-le-dinh-cuong-kiem-tra-cong-tac-huan-luyen-uav-lv-31/12006/110
 
 [znews.vn]
-match = -25.0%%
-title = Nghịch lý Lukaku - Thể thao
-url = https://znews.vn/nghich-ly-lukaku-post1483431.html
+match = -87.5%%
+title = Số áo đặc biệt của sao trẻ Real Madrid
+url = https://znews.vn/so-ao-dac-biet-cua-sao-tre-real-madrid-post1488646.html
 
 [vtcnews.vn]
 match = -106.2%%
@@ -317,9 +317,9 @@ title = Bảo Lộc: Xe cấp cứu tới điểm thi đón 2 thí sinh bị tai
 url = https://baolamdong.vn/xa-hoi/202406/bao-loc-xe-cap-cuu-toi-diem-thi-don-2-thi-sinh-bi-tai-nan-den-benh-vien-dieu-tri-ed827a4/
 
 [baochinhphu.vn]
-match = -206.2%%
-title = Truyền thông quốc tế ấn tượng với hình ảnh hàng ngàn ...
-url = https://baochinhphu.vn/truyen-thong-quoc-te-an-tuong-voi-hinh-anh-hang-ngan-nguoi-tien-biet-tong-bi-thu-nguyen-phu-trong-102240727105521442.htm
+match = -225.0%%
+title = Thủ tướng tưởng niệm các anh hùng liệt sĩ và tặng quà gia ...
+url = https://baochinhphu.vn/thu-tuong-tuong-niem-cac-anh-hung-liet-si-va-tang-qua-gia-dinh-chinh-sach-tai-thai-nguyen-102240728084907468.htm
 
 [eva.vn]
 match = -212.5%%
@@ -607,9 +607,9 @@ title = Hòa Lạc IEC nhận giấy chứng nhận gạo hữu cơ
 url = https://luagaoviet.com/ban-tin-tren-mang/hoa-lac-iec-nhan-giay-chung-nhan-gao-huu-co
 
 [giaoducthoidai.vn]
-match = -175.0%%
-title = Giá vàng hôm nay 27/7 thế giới lại đảo chiều tăng nhẹ
-url = https://giaoducthoidai.vn/gia-vang-hom-nay-277-the-gioi-lai-dao-chieu-tang-nhe-post693356.html
+match = -200.0%%
+title = Tân HLV đội tuyển U16 Việt Nam giúp đội nhà vô địch ấn ...
+url = https://giaoducthoidai.vn/tan-hlv-doi-tuyen-u16-viet-nam-giup-doi-nha-vo-dich-an-tuong-post693433.html
 
 [nld.com.vn]
 match = -200.0%%
